[package]
name = "yvh"
version = "0.1.0"
authors = ["Anler Hernández Peral <inbox.anler@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
with-serde = ["serde"]

[dependencies]
serde = { version = "1.0.103", optional = true }
